--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,18 @@
     <head>
         <meta charset="utf-8" />
         <title>Stats One-Pager</title>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
     </head>
     <body>
-        <div id="app"></div>
-        <script src="./js/index.js"></script>
+        <div id="main"></div>
+        <script src="./index.js"></script>
+        <link rel="stylesheet" href="./index.css">
     </body>
 </html>
